--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,40 @@
-/target
-!/target/GameModeInventories.jar
+# Compiled class file
+*.class
 
-# osx noise
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+replay_pid*
+
+# macOS system files
 .DS_Store
-profile
 
-# xcode noise
-build/*
-*.mode1
-*.mode1v3
-*.mode2v3
-*.perspective
-*.perspectivev3
-*.pbxuser
-*.xcworkspace
-xcuserdata
+# gradle build output files
+build/
+.gradle/
 
-# svn & cvs
-.svn
-CVS
-
-# other stuff
-.classpath
+# eclipse project files
+.settings/
 .project
-.settings
-nb-configuration.xml
+.classpath
+bin/
 
+# IntelliJ files
 .idea/
-/target/
-*.iml
-*.iml
